--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GST Calculator</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="./script.js" defer></script>
   </head>
   <body>
     <header>
@@ -28,11 +29,12 @@
       </form>
       <div id="result">
         <p>GST Payable: <span id="gstAmount"></span></p>
+        <p>Total Amount Payable: <span id="totalAmount"></span></p>
       </div>
     </main>
     <footer>
       <p>&copy; 2023 GST Calculator</p>
-      <p>Made by BITS SMASHERS</p>
+      <p>Made by BIT BUSTERS</p>
     </footer>
   </body>
 </html>
