Add gstRates.html, modifies style.css and index.html

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         <p>Total Amount Payable: <span id="totalAmount"></span></p>
       </div>
     </main>
+    <div class="gstRates">
+      <a href="./gstRates.html">Get Gst Rates</a>
+    </div>
+    <div class="gstRates">
+      <a href="https://cleartax.in/s/gst-rates">Get Full List</a>
+    </div>
     <footer>
       <p>&copy; 2023 GST Calculator</p>
       <p>Made by BIT BUSTERS</p>
